--- a/7-DivaError.tex
+++ b/7-DivaError.tex
@@ -127,7 +127,7 @@ From there, applying the correction $1/(1-\varphi_0)$, we can use the covariance
 \end{equation}
 then the error is 
 \begin{equation}
-\e^2 (\vect{r}) = \sigma^2 \hat{B}(\vect{r},\vect{r}) - \sigma^2 \matr{H} \hat{\vect{b}},
+e^2 (\vect{r}) = \sigma^2 \hat{B}(\vect{r},\vect{r}) - \sigma^2 \matr{H} \hat{\vect{b}},
 \end{equation}
 where $\hat{B}(\vect{r},\vect{r})$ is the local relative background variance (calculated by \eqref{eq:brr}) and $\hat{\vect{b}}$ is a vector filled according to \eqref{eq:btildco}.
 
