--- a/8-DivaConstraints.tex
+++ b/8-DivaConstraints.tex
@@ -2,7 +2,7 @@
 \chapter{Additional constraints and detrending\label{chap:advection}}
 %---------------------------------------------------------------
 
-This chapter shows how additional dynamical constraints (advection, diffusion, source, decay) can be added to the cost function that provide the analysed field in \diva. It also describes the \textit{detrending} tool, which allows the extraction of trends from groups.
+\lettrine[lines=2, loversize=-0.1, lraise=0.1]{T}{his} chapter shows how additional dynamical constraints (advection, diffusion, source, decay) can be added to the cost function that provide the analysed field in \diva. It also describes the \textit{detrending} tool, which allows the extraction of trends from groups.
 
 \minitoc
 
